use single tcp client and make wifi configurable via web ui

--- a/GroundStation/data/index.html
+++ b/GroundStation/data/index.html
@@ -53,7 +53,14 @@
           <button class="save">Update</button>
           <div class="status"></div>
         </form>
+      </section>
+
+      <section id="admin">
+        <h2>Admin</h2>
+
         <button id="restart" type="button">Restart ESP32</button>
+        <button id="disconnect-telemetry" type="button">Disconnect Telemetry Endpoint</button>
+        <button id="connect-telemetry" type="button">Connect Telemetry</button>
       </section>
     </main>
 
